src/validation/tests/snapshots/rusty__validation__tests__array_validation_test__array_access_dimension_mismatch.snap
---
source: src/validation/tests/array_validation_test.rs
expression: diagnostics
---
error: Expected array access with 1 dimensions, found 2
   ┌─ <internal>:13:8
   │
13 │       arr[0, 1] := 1;
   │           ^^^^ Expected array access with 1 dimensions, found 2

error: Expected array access with 1 dimensions, found 2
   ┌─ <internal>:14:8
   │
14 │       vla[0, 1] := 1;
   │           ^^^^ Expected array access with 1 dimensions, found 2

error: Expected array access with 1 dimensions, found 3
   ┌─ <internal>:15:8
   │
15 │       arr[0, 1, 2] := 1;
   │           ^^^^^^^ Expected array access with 1 dimensions, found 3

error: Expected array access with 1 dimensions, found 3
   ┌─ <internal>:16:8
   │
16 │       vla[0, 1, 2] := 1;
   │           ^^^^^^^ Expected array access with 1 dimensions, found 3


